--- a/gmkai-core/build.gradle
+++ b/gmkai-core/build.gradle
@@ -27,17 +27,18 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
-    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
-    implementation group: 'org.bouncycastle', name: 'bctls-jdk18on', version: '1.71'
-    implementation("org.bouncycastle:bcpkix-jdk15on:1.70")
-    // https://mvnrepository.com/artifact/io.netty/netty-all
+    implementation(
+            "com.google.guava:guava:$guavaVersion",
+            "org.bouncycastle:bcprov-jdk15on:$bcprovVersion",
+            "org.bouncycastle:bcpkix-jdk15on:$bcpkixVersion"
 
-    testImplementation 'junit:junit:4.12'
+    )
 
+    testImplementation(
+            "junit:junit:$junitVersion",
+            "org.hamcrest:hamcrest-core:$hamcrestVersion",
+            "org.hamcrest:hamcrest-library:$hamcrestVersion",
+            "org.mockito:mockito-core:$mockitoVersion"
+    )
 
-}
-
-test {
-    useJUnitPlatform()
 }
