--- a/gmkai-core/build.gradle
+++ b/gmkai-core/build.gradle
@@ -33,9 +33,11 @@ dependencies {
             "org.bouncycastle:bcpkix-jdk15on:$bcpkixVersion"
 
     )
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 
     testImplementation(
-            "junit:junit:$junitVersion",
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            "org.junit.jupiter:junit-jupiter-params:$junitVersion",
             "org.hamcrest:hamcrest-core:$hamcrestVersion",
             "org.hamcrest:hamcrest-library:$hamcrestVersion",
             "org.mockito:mockito-core:$mockitoVersion"
