--- a/gmkai-core/build.gradle
+++ b/gmkai-core/build.gradle
@@ -40,7 +40,8 @@ dependencies {
             "org.junit.jupiter:junit-jupiter-params:$junitVersion",
             "org.hamcrest:hamcrest-core:$hamcrestVersion",
             "org.hamcrest:hamcrest-library:$hamcrestVersion",
-            "org.mockito:mockito-core:$mockitoVersion"
+            "org.mockito:mockito-core:$mockitoVersion",
+            fileTree(dir:'lib',includes:['gmhelper.jar'])
     )
 
 }
