added test of tlcp11 server handshake with cipher suite of ecc_sm4_cbc_sm3

--- a/gmkai-core/build.gradle
+++ b/gmkai-core/build.gradle
@@ -41,6 +41,7 @@ dependencies {
             "org.hamcrest:hamcrest-core:$hamcrestVersion",
             "org.hamcrest:hamcrest-library:$hamcrestVersion",
             "org.mockito:mockito-core:$mockitoVersion",
+            "com.aliyun:gmsse:1.1.0",
             fileTree(dir:'lib',includes:['gmhelper.jar'])
     )
 
