--- a/gmkai-core/build.gradle
+++ b/gmkai-core/build.gradle
@@ -5,9 +5,6 @@ buildscript {
         }
         mavenCentral()
     }
-    dependencies {
-        classpath 'com.google.gradle:osdetector-gradle-plugin:1.4.0'
-    }
 }
 plugins {
     id 'java'
@@ -16,9 +13,6 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-
-// Use the osdetector-gradle-plugin
-apply plugin: "com.google.osdetector"
 repositories {
     maven {
         url 'https://maven.aliyun.com/repository/public/'
@@ -33,11 +27,11 @@ dependencies {
             "org.bouncycastle:bcpkix-jdk15on:$bcpkixVersion"
 
     )
-    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 
     testImplementation(
             "org.junit.jupiter:junit-jupiter-api:$junitVersion",
             "org.junit.jupiter:junit-jupiter-params:$junitVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
             "org.hamcrest:hamcrest-core:$hamcrestVersion",
             "org.hamcrest:hamcrest-library:$hamcrestVersion",
             "org.mockito:mockito-core:$mockitoVersion",
